Ensure scroll down button visible on load; always force scrolling

--- a/index.css
+++ b/index.css
@@ -186,6 +186,7 @@ section {
 
 #scroll-down {
     bottom: 10px;
+    display: block;
 }
 
 .contact {
